# swiftget

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
src/swiftget/: __init__.py  cli.py  downloader.py  utils.py
tests/: __init__.py  test_downloader.py  test_utils.py
